# promptDOM

./: .gitignore  LICENSE  README.md  benchmark_planners.py  pyproject.toml  requirements.txt  run_server.py
data/: site_aliases.json
datasets/: planning.json  planning_seed.json  repair.json  resolution.json
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
promptdom/: __init__.py  browser.py  features.py  main.py  models.py  planner.py  runtime.py
promptdom/analytics/: collector.py  models.py  service.py
promptdom/archetypes/: __init__.py  detector.py  models.py  service.py
promptdom/capabilities/: models.py  registry.py
promptdom/capture/: __init__.py  analytics.py  extractor.py  models.py  service.py  storage.py
promptdom/compiler/: ast.py  compiler.py  generator.py  models.py  templates.py  validators.py
promptdom/config/: llm.py
promptdom/design/: __init__.py  models.py  service.py
tests/: __init__.py  test_action_compiler.py  test_analytics.py  test_auto_apply.py  test_candidates.py  test_capability_registry.py  test_capture.py  test_compiler.py  test_design_planner.py  test_feature_matcher.py  test_feature_service.py  test_feature_store.py  test_hybrid_planner.py  test_inspection_models.py  test_inspection_service.py  test_lifecycle.py  test_llm_health.py  test_llm_providers.py  test_lmstudio_provider.py  test_ollama_provider.py  test_planner_service.py  test_repair.py  test_resolution.py  test_rule_planner.py  test_runtime_registry.py  test_scoring.py  test_transform_executor.py  test_transform_service.py  test_validators.py
(+118 files in other folders)
